fix add-category form visibility

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -280,10 +280,12 @@ body {
   border-radius: 8px;
   opacity: 0;
   z-index: 10;
+  visibility: hidden;
   transition: 100ms ease-in-out;
 }
 
 .category-form.active{
+  visibility: visible;
   opacity: 1;
   margin-top: 10px;
 }
